fix spacing issue

--- a/src/styles/base/index.css
+++ b/src/styles/base/index.css
@@ -16,7 +16,7 @@ nav{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 1em 2.5vw;
+    /* padding: 1em 2.5vw; */
 }
 
 footer{
