--- a/src/styles/components/_hero.css
+++ b/src/styles/components/_hero.css
@@ -6,7 +6,7 @@
 
 .hero__first-part{
     position: relative;
-    padding: 0 5em;
+    /* padding: 0 5em; */
     height: 100vh;
     display: flex;
     justify-content: space-around;
